--- a/home.html
+++ b/home.html
@@ -30,20 +30,6 @@
     <!-- animate.js  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
-    <style>
-        .sticky {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            z-index: 99999999;
-            background-color: #09021b;
-            overflow: hidden;
-        }
-
-        .sticky+.content {
-            padding-top: 102px;
-        }
-    </style>
 
 </head>
 
@@ -115,7 +101,7 @@
             <a href="" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Services</a>
             <a href="" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Contact</a>
         </div>
-        <div class="absolute -top-60 right-0 opacity-10 " style="z-index: -9999999;background: hsla(291, 100%, 50%, 1);
+        <div class="gradiant-bg absolute -top-60 right-0 opacity-10" style="z-index: -9999999;background: hsla(291, 100%, 50%, 1);
 
         background: radial-gradient(circle, hsla(291, 100%, 50%, 1) 24%, hsla(257, 86%, 6%, 1) 61%);
     
@@ -222,7 +208,7 @@
                     <h2 class="font-2 text-6xl uppercase leading-relaxed">Twin Reality</h2>
                     <p class="font-2 tracking-widest font-light">AR, VR, MR Company In India</p>
                     <div class="banner-border-2 pb-4"></div>
-                    <p class="font-light mt-8 text-gray-400 leading-relaxed tracking-wide">
+                    <p class="font-light xl:text-lg mt-8 text-gray-400 leading-relaxed tracking-wide">
                         Twin Reality is a cutting-edge technology company in India that <br> specializes in augmented
                         reality (AR), virtual reality (VR), and <br> mixed reality (MR) solutions. Since its
                         establishment, the <br> company has made significant strides in the field of immersive <br>
@@ -230,7 +216,7 @@
                         them.
                     </p>
                     <img src="assets/image/twin-reality-img.jpg" alt="twin-reality" class="my-10 sm:block xl:hidden">
-                    <p class="font-light mt-5 text-gray-400 leading-relaxed tracking-wide">
+                    <p class="font-light xl:text-lg mt-5 text-gray-400 leading-relaxed tracking-wide">
                         Twin Reality’s unique approach to AR, VR, and MR involves <br> creating experiences that are
                         tailored to the needs of the user. <br> They achieve this by combining creative design,
                         innovative <br> technology, and a deep understanding of user behavior to <br> develop immersive
