--- a/Contact Us.html
+++ b/Contact Us.html
@@ -95,7 +95,7 @@
     <!-- main -->
     <main>
         <!-- banner -->
-        <div class="sub-banner bg-center bg-top bg-cover bg-no-repeat p-40 pl-0">
+        <div class="sub-banner bg-center bg-cover bg-no-repeat p-40 pl-0">
             <div class="container mx-auto px-4  xl:pl-28 flex items-center py-4 text-xl">
                 <div class="w-full flex items-center ">
                     <h1 class="font-2 lg:text-7xl sm:text-6xl leading-normal mt-20" data-aos="fade-right">
@@ -170,7 +170,7 @@
                 <div class="w-full text-center">
                     <h2 class=" font-2 text-7xl leading-normal uppercase">select a date & time​</h2>
                 </div>
-                <div class="w-full flex flex justify-start mt-20">
+                <div class="w-full flex justify-start mt-20">
                     <div class="w-1/2 flex flex-col justify-center">
                         <div class="mt-16" data-aos="fade-right">
                             <p class="font-2 text-6xl uppercase leading-relaxed">30 minute</p>
@@ -189,12 +189,12 @@
                     </div>
                     <div class=" border border-zinc-50 border-solid opacity-10" style="height: auto;"></div>
                     <div class="w-1/2 flex flex-col mt-20" data-aos="flip-up">
-                        <div class="choose-bg p-16" style="height: 600px;">
+                        <div class="choose-bg lg:p-14 sm:p-8 h-4/6">
                             <div class="flex justify-center  items-center mb-8">
                                 <button id="prev" class="text-3xl font-2">
                                     <img src="assets/image/down (1).png" alt="down" class="w-10 h-10">
                                 </button>
-                                <h2 id="monthYear" class="text-3xl font-2 text-yellow-500 px-5">May 2023</h2>
+                                <h2 id="monthYear" class="lg:text-3xl font-2 text-yellow-500 px-5">May 2023</h2>
                                 <button id="next" class="text-3xl font-2">
                                     <img src="assets/image/down.png" alt="down" class="w-10 h-10">
                                 </button>
@@ -202,19 +202,19 @@
 
                             <!-- Days of the Week -->
                             <div class="flex justify-center text-center mb-6">
-                                <div class="font-2 xl:px-8 sm:px-4">Mo</div>
-                                <div class="font-2 xl:px-8 sm:px-4">Tu</div>
-                                <div class="font-2 xl:px-8 sm:px-4">We</div>
-                                <div class="font-2 xl:px-8 sm:px-4">Th</div>
-                                <div class="font-2 xl:px-8 sm:px-4">Fr</div>
-                                <div class="font-2 xl:px-8 sm:px-4">Sa</div>
-                                <div class="font-2 xl:px-8 sm:px-4">Su</div>
+                                <div class="font-2 2xl:px-8 xl:px-6 lg:px-4 sm:px-2">Mo</div>
+                                <div class="font-2 2xl:px-8 xl:px-6 lg:px-4 sm:px-2">Tu</div>
+                                <div class="font-2 2xl:px-8 xl:px-6 lg:px-4 sm:px-2">We</div>
+                                <div class="font-2 2xl:px-8 xl:px-6 lg:px-4 sm:px-2">Th</div>
+                                <div class="font-2 2xl:px-8 xl:px-6 lg:px-4 sm:px-2">Fr</div>
+                                <div class="font-2 2xl:px-8 xl:px-6 lg:px-4 sm:px-2">Sa</div>
+                                <div class="font-2 2xl:px-8 xl:px-6 lg:px-4 sm:px-2">Su</div>
                             </div>
                             <div class="w-full border border-zinc-50 border-solid opacity-10"></div>
                             <!-- Dates -->
-                            <div id="dates" class="grid grid-cols-7 text-center gap-y-4 gap-px-1 mt-10"></div>
+                            <div id="dates" class="grid grid-cols-7 text-center lg:gap-y-4 lg:gap-px-1 lg:mt-10 md:mt-5 lg:text-xl sm:text-lg"></div>
                         </div>
-                        <div class="time p-20 flex flex-col" data-aos="fade-left">
+                        <div class="time lg:p-20 sm:p-10 flex flex-col" data-aos="fade-left">
                             <div class="flex items-center">
                                 <img src="assets/image/time.png" alt="time" class="w-10 h-10">
                                 <p class="pl-5 text-2xl text-zinc-300">Time Zone</p>
@@ -245,36 +245,36 @@
                 <div class="w-full flex flex-wrap items-center justify-evenly">
                     <!-- contact -->
                     <div data-aos="zoom-in-right"
-                        class="flex  flex-col items-center justify-center lg:h-64 sm:h-32 mt-16"
+                        class="flex  flex-col items-center justify-start pt-5 lg:h-64 sm:h-40 mt-16"
                         style="width: 30%;background: linear-gradient(#09021b, #09021b) 50% 50%/calc(100% - 4px) calc(100% - 4px) no-repeat,linear-gradient(#816912 0%, #634b11 34%, #09021b 100%);border-radius: 0px;box-sizing: content-box;">
-                        <span class="text-4xl text-zinc-300 tracking-wide">Contact Us</span>
+                        <span class="lg:text-4xl sm:text-xl text-zinc-300 tracking-wide">Contact Us</span>
                         <div class="flex items-center pt-8">
                             <img src="assets/image/phone-call.png" alt="phone-call" class="w-5 h-5">
-                            <p class="pl-4 font-light text-zinc-300">+91 8780363238</p>
+                            <p class="pl-4 font-light text-zinc-300 lg:text-xl sm:text-sm">+91 8780363238</p>
                         </div>
                         <div class="flex items-center pt-4">
                             <img src="assets/image/email1.png" alt="email1" class="w-5 h-5">
-                            <p class="pl-4 font-light text-zinc-300 tracking-wider">contact@twinreality.com</p>
+                            <p class="pl-4 font-light text-zinc-300 tracking-wider lg:text-xl sm:text-sm">contact@twinreality.com</p>
                         </div>
                     </div>
                     <!-- location -->
                     <div data-aos="zoom-in-right"
-                        class="flex  flex-col items-center justify-center lg:h-64 sm:h-32 mt-16"
+                        class="flex  flex-col items-center justify-start pt-5 lg:h-64 sm:h-40 mt-16"
                         style="width: 30%;background: linear-gradient(#09021b, #09021b) 50% 50%/calc(100% - 4px) calc(100% - 4px) no-repeat,linear-gradient(#816912 0%, #634b11 34%, #09021b 100%);border-radius: 0px;box-sizing: content-box;">
-                        <span class="text-4xl text-zinc-300 tracking-wide">Visit Us</span>
-                        <div class="flex flex-col items-center pt-8">
-                            <p class=" font-light text-zinc-300 tracking-wide">Currently we are located in<br> Ahmedabad and Vadodara.</p>
-                            <p class=" font-light text-zinc-300 tracking-wide pt-5">Office location coming soon</p>
+                        <span class="lg:text-4xl sm:text-xl text-zinc-300 tracking-wide">Visit Us</span>
+                        <div class="flex flex-col items-center pt-6">
+                            <p class=" font-light text-zinc-300 tracking-wide lg:text-xl sm:text-sm">Currently we are located in<br> Ahmedabad and Vadodara.</p>
+                            <p class=" font-light text-zinc-300 tracking-wide pt-5 lg:text-xl sm:text-sm">Office location coming soon</p>
                         </div>
                     </div>
                     <!-- time -->
                     <div data-aos="zoom-in-right"
-                        class="flex  flex-col items-center justify-center lg:h-64 sm:h-32 mt-16"
+                        class="flex  flex-col items-center justify-start pt-5 lg:h-64 sm:h-40 mt-16"
                         style="width: 30%;background: linear-gradient(#09021b, #09021b) 50% 50%/calc(100% - 4px) calc(100% - 4px) no-repeat,linear-gradient(#816912 0%, #634b11 34%, #09021b 100%);border-radius: 0px;box-sizing: content-box;">
-                        <span class="text-4xl text-zinc-300 tracking-wide">Our Hours</span>
+                        <span class="lg:text-4xl sm:text-xl text-zinc-300 tracking-wide">Our Hours</span>
                         <div class="flex items-center pt-8">
                             <img src="assets/image/time.png" alt="time.png" class="w-5 h-5">
-                            <p class="pl-4 font-light text-zinc-300">Mon - Sat: 9AM-8PM</p>
+                            <p class="pl-4 font-light text-zinc-300 lg:text-xl sm:text-sm">Mon - Sat: 9AM-8PM</p>
                         </div>
                     </div>
                 </div>
@@ -293,14 +293,14 @@
                     </div>
                     <div class="flex mt-28">
                         <div class="w-1/2 mr-5">
-                            <div class="our-project-vr flex flex-col justify-end xl:h-72 md:h-64 p-8">
+                            <div class="our-project-vr flex flex-col justify-end xl:h-72 md:h-52 lg:p-8 sm:p-4">
                                 <div class="flex items-end">
                                     <div>
-                                        <img class="object-cover object-top xl:h-72 xl:w-72 lg:w-52 lg:h-64" src="assets/image/testimonial-1.png" data-aos="flip-left"
+                                        <img class="object-cover object-top xl:h-72 xl:w-72 lg:w-52 lg:h-64 sm:w-40 sm:h-52" src="assets/image/testimonial-1.png" data-aos="flip-left"
                                             alt="project-1">
                                     </div>
-                                    <div style="width: 80%;" class="pl-8">
-                                        <p class="xl:text-xl sm:text-base leading-relaxed tracking-wide pb-7">
+                                    <div style="width: 80%;" class="pl-6">
+                                        <p class="xl:text-xl sm:text-sm leading-relaxed tracking-wide pb-7">
                                             "“Happy with my Virtual Art Gallery design. The whole team performed a fantastic job, from conceptualising my design to putting it into action. ”
                                         </p>
                                         <div class="flex justify-between">
@@ -318,14 +318,14 @@
                             </div>
                         </div>
                         <div class="w-1/2 ml-5">
-                            <div class="our-project-vr flex flex-col justify-end xl:h-72 md:h-64 p-8">
+                            <div class="our-project-vr flex flex-col justify-end xl:h-72 md:h-52 lg:p-8 sm:p-4">
                                 <div class="flex items-end">
                                     <div>
-                                        <img class="object-cover object-top xl:w-72 xl:h-72 lg:w-52 lg:h-64" src="assets/image/testimonial-2.png" data-aos="flip-right"
+                                        <img class="object-cover object-top xl:w-72 xl:h-72 lg:w-52 lg:h-64 sm:w-40 sm:h-52"  src="assets/image/testimonial-2.png" data-aos="flip-right"
                                             alt="project-1">
                                     </div>
-                                    <div style="width: 80%;" class="pl-8">
-                                        <p class="xl:text-lg sm:text-base leading-relaxed tracking-wide pb-7">
+                                    <div style="width: 80%;" class="pl-6">
+                                        <p class="xl:text-xl sm:text-sm leading-relaxed tracking-wide lg:pb-7 sm:pb-2">
                                             “The virtual show my team and I created for a client was a huge success, and they really enjoyed the 3D elements. I want to participate in this again next year....
                                         </p>
                                         <div class="flex justify-between">
@@ -351,7 +351,7 @@
     <footer>
         <div class="footer overflow-hidden h-auto">
             <div
-                class="container  lg:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 flex items-center py-20 text-xl">
+                class="container  lg:container  xl:container md:container  sm:container mx-auto px-4 flex items-center py-20 text-xl">
                 <div class="xl:w-1/3 sm:w-1/2">
                     <div class="flex flex-col justify-center items-start" data-aos="fade-down-right">
                         <div class="logo">
