--- a/service-vr.html
+++ b/service-vr.html
@@ -114,13 +114,13 @@
                 </div>
             </div>
             <!-- Mobile Menu Button -->
-            <button id="menu-btn" class="block sm:hidden text-gray-700 focus:outline-none">
+            <button id="menu-btn" class="block relative sm:hidden text-gray-700 focus:outline-none">
                 <img src="assets/image/menu.png" alt="menu" class="mob-s:w-5">
             </button>
         </div>
 
         <!-- Mobile Menu (Initially hidden) -->
-        <div id="mobile-menu" class="hidden sm:hidden transparent text-center text-white">
+        <div id="mobile-menu" class="hidden sm:hidden transparent text-center text-white absolute top-10 right-44 bg-[#09021b]  transform translate-x-full transition-transform duration-300">
             <a href="home.html" class="block px-4 py-2 hover:bg-gray-100">Home</a>
             <a href="service-vr.html" class="block px-4 py-2 hover:bg-gray-100">Services</a>
             <a href="VR-Times.html" class="block px-4 py-2 hover:bg-gray-100">AR/VR Times</a>
@@ -145,7 +145,7 @@
         <div class="service-form">
             <div class="container mx-auto px-4 flex flex-col items-center py-4 text-xl">
                 <div class="form-contain w-full flex justify-evenly">
-                    <p class="font-light leading-relaxed tracking-wider sm:text-xl mob-s:text-lg">
+                    <p class="font-light leading-relaxed  tracking-wider sm:text-xl mob-s:text-lg">
                         Bring your ideas to life with our Virtual Reality company. Our team of experienced developers
                         specializes in creating immersive, interactive VR experiences that engage and captivate
                         users. From gaming and entertainment to education and training, we can help you build a VR app
