--- a/home.html
+++ b/home.html
@@ -275,7 +275,7 @@
                         </h3>
                     </div>
                     <div
-                        class="flex mob-s:flex-wrap  mob-s:justify-between sm:justify-evenly items-start lg:mt-20 sm:mt-10">
+                        class="flex mob-s:flex-wrap  mob-s:justify-center sm:justify-evenly items-start lg:mt-20 sm:mt-10">
                         <div class="flex flex-col items-center sm:mt-0 mob-s:mt-10" data-aos="zoom-out">
                             <div class="lg:w-24 lg:h-24 mob-s:h-16 mob-s:w-16  choose-bg  p-4" style="background: rgb(36,31,52);background: linear-gradient(127deg, rgba(36,31,52,1) 0%, rgba(36,27,59,1) 22%, rgba(14,7,32,1) 55%);
                             border: 2px solid #241e37;">
@@ -555,17 +555,17 @@
             <div
                 class="container  xl:container  lg:container  md:container  sm:container mx-auto px-4 flex lg:flex-row mob-s:flex-col items-center py-4 text-xl">
                 <div class="xl:w-3/6 mob-s:w-full mob-s:flex mob-s:flex-col" data-aos="zoom-in-right">
-                    <div class="flex items-center">
+                    <div class="flex mob-s:flex-col sm:flex-row items-center">
                         <img class="w-56 h-56 sm:w-48 mob-s:w-36 sm:h-48 mob-s:h-36 object-cover object-center"
                             src="assets/image/times-1.png" alt="times-1">
-                        <div class="p-6">
+                        <div class="p-6 mob-s:text-center sm:text-left">
                             <h3 class="font-2 sm:text-xl mob-s:text-sm">Process of designing a VR industrial training
                                 program</h3>
                             <p class="pt-3 font-light sm:text-base mob-s:text-xs">
                                 Designing an Impactful VR Industrial Training Program: Step-by-Step Virtual Reality
                                 (VR)....
                             </p>
-                            <a href="VR-Times.html" class="pt-4 flex items-center group">
+                            <a href="VR-Times.html" class="pt-4 flex items-center group mob-s:justify-center sm:justify-start">
                                 <span
                                     class="font-2 sm:text-base mob-s:text-sm text-yellow-500 pr-5  group-hover:text-yellow-400  transition duration-150 ease-out hover:ease-in ">READ
                                     MORE</span>
@@ -576,10 +576,10 @@
                     </div>
                     <img src="assets/image/our-times.jpg" alt="our-times"
                         class="sm:my-10 sm:h-96 mob-s:h-64  object-cover mob-s:block xl:hidden">
-                    <div class="flex items-center sm:mt-10 mob-s:mt-5">
+                    <div class="flex mob-s:flex-col sm:flex-row items-center sm:mt-10 mob-s:mt-5">
                         <img class="w-56 h-56 sm:w-48 mob-s:w-36 sm:h-48 mob-s:h-36 object-cover object-center"
                             src="assets/image/times-2.png" alt="times-2">
-                        <div class="p-6">
+                        <div class="p-6 mob-s:text-center sm:text-left">
                             <h3 class="font-2  sm:text-xl mob-s:text-sm">Illumetry Eos: Illumetry Unveils Its New
                                 Holographic Display Device
                             </h3>
@@ -587,7 +587,7 @@
                                 Illumetry, a provider of XR displays, recently announced its Illumetry EOS
                                 gadget....
                             </p>
-                            <a href="VR-Times.html" class="pt-4 flex items-center group">
+                            <a href="VR-Times.html" class="pt-4 flex items-center mob-s:justify-center sm:justify-start group">
                                 <span
                                     class="font-2 sm:text-base mob-s:text-sm text-yellow-500 pr-5  group-hover:text-yellow-400  transition duration-150 ease-out hover:ease-in ">READ
                                     MORE</span>
@@ -621,7 +621,7 @@
                                 <!-- Slide 1 -->
                                 <div class="min-w-full flex flex-col items-center p-6 rounded-lg">
                                     <div
-                                        class="our-project-vr flex flex-col justify-end xl:w-full xl:h-96 sm:h-72 mob-s:h-52 xl:p-10  mob-s:p-5">
+                                        class="our-project-vr flex flex-col justify-end w-full xl:h-96 sm:h-72 mob-s:h-52 xl:p-10  mob-s:p-4">
                                         <div class="flex items-end">
                                             <div>
                                                 <img class="object-cover object-top xl:h-96 sm:h-72 sm:w-80  mob-s:h-52  mob-s:w-44"
@@ -631,7 +631,7 @@
                                             </div>
                                             <div style="width: 80%;" class="xl:pl-16 sm:pl-10  mob-s:pl-3">
                                                 <p
-                                                    class="leading-loose xl:text-xl sm:text-base  mob-s:text-sm tracking-wide  mob-s:text-justify xl:pr-28 xl:pb-14  mob-s:pb-5">
+                                                    class="leading-loose xl:text-xl sm:text-base  mob-s:text-xs tracking-wide  mob-s:text-justify xl:pr-28 xl:pb-14  mob-s:pb-5">
                                                     Lorem Ipsum is simply dummy text of the printing and typesetting
                                                     industry.
                                                     Lorem
@@ -648,14 +648,14 @@
                                                 <div class="flex justify-between">
                                                     <div>
                                                         <img src="assets/image/star.png" alt="star"
-                                                            class="pb-3 lg:w-36 sm:w-28  mob-s:w-20 ">
-                                                        <span class="font-2 xl:text-lg sm:text-lg  mob-s:text-sm">
+                                                            class="mob-s:pb-3 lg:w-36 sm:w-28  mob-s:w-20 ">
+                                                        <span class="font-2 xl:text-lg sm:text-lg  mob-s:text-xs">
                                                             Yasheh Patel
                                                         </span>
                                                     </div>
-                                                    <div>
+                                                    <div class="mob-s:hidden md:block">
                                                         <img src="assets/image/“.png" alt="“"
-                                                            class="ml-auto xl:w-24 sm:w-16 mob-s:w-8">
+                                                            class="ml-auto xl:w-24 sm:w-16">
                                                     </div>
                                                 </div>
                                             </div>
