--- a/service-vr-consoltion.html
+++ b/service-vr-consoltion.html
@@ -131,11 +131,11 @@
     <!-- main -->
     <main>
         <!-- banner -->
-        <div class="sub-banner sm:bg-center sm:bg-top bg-cover bg-no-repeat mob-s:bg-center sm:h-[700px] sm:p-40 mob-s:p-20 pl-0">
+        <div class="sub-banner sm:bg-center sm:bg-top bg-cover bg-no-repeat mob-s:bg-center sm:h-[700px] sm:p-40 mob-s:p-14 pl-0">
             <div class="container mx-auto px-4  xl:pl-28 flex items-center py-4 text-xl">
                 <div class="w-3/5 flex items-center " data-aos="fade-right">
-                    <h1 class="font-2 lg:text-7xl sm:text-6xl mob-s:text-4xl leading-normal mt-20">
-                        <span class="font-2  lg:text-7xl sm:text-6xl mob-s:text-4xl text-yellow-500">VR</span><br> CONSULATION
+                    <h1 class="font-2 lg:text-7xl sm:text-6xl mob-s:text-3xl leading-normal mt-20">
+                        <span class="font-2  lg:text-7xl sm:text-6xl mob-s:text-3xl text-yellow-500">VR</span><br> CONSULATION
                     </h1>
                 </div>
             </div>
@@ -246,24 +246,24 @@
                     </div>
                     <div class="flex md:flex-row mob-s:flex-col mt-28">
                         <div class="md:w-1/2 mr-5">
-                            <div class="our-project-vr flex flex-col justify-end xl:h-72 md:h-52 mob-s:h-48 lg:p-8 mob-s:p-4 ">
+                            <div class="our-project-vr flex flex-col justify-end xl:h-72 md:h-52 mob-s:h-44 lg:p-8 mob-s:p-4 ">
                                 <div class="flex items-end">
                                     <div>
-                                        <img class="object-cover object-top xl:h-72 xl:w-72 lg:w-52 lg:h-64 mob-s:w-44 mob-s:h-52" src="assets/image/testimonial-1.png" data-aos="flip-left"
+                                        <img class="object-cover object-top xl:h-72 xl:w-72 lg:w-52 lg:h-64 mob-s:w-44 mob-s:h-48" src="assets/image/testimonial-1.png" data-aos="flip-left"
                                             alt="project-1">
                                     </div>
                                     <div style="width: 80%;" class="pl-6">
-                                        <p class="xl:text-xl mob-s:text-sm leading-relaxed tracking-wide pb-7">
+                                        <p class="xl:text-xl mob-s:text-xs leading-relaxed tracking-wide pb-7">
                                             "“Happy with my Virtual Art Gallery design. The whole team performed a fantastic job <span class="mob-s:hidden md:block">, from conceptualising my design to putting it into action. ”</span> ...
                                         </p>
                                         <div class="flex justify-between">
                                             <div>
-                                                <span class="font-2 text-lg">
+                                                <span class="font-2 md:text-lg mob-s:text-xs">
                                                     Eesa Haines
                                                 </span>
                                             </div>
                                             <div>
-                                                <img src="assets/image/“.png" alt="“" class="ml-auto xl:w-10 md:w-5 xl:h-10 mob-s:h-5">
+                                                <img src="assets/image/“.png" alt="“" class="ml-auto xl:w-10 md:w-5 xl:h-10 mob-s:h-2">
                                             </div>
                                         </div>
                                     </div>
@@ -302,7 +302,7 @@
         <div class="sm:my-28 mob-s:my-8"></div>
         <div class="gradiant-2 gradiant-3  relative overflow-hidden">
             <!-- images-para -->
-            <div class="imagePara">
+            <div class="imagePara mob-s:hidden md:block">
                 <div class="container mx-auto px-4 flex flex-col items-center py-4 text-xl">
                     <div class="w-full flex justify-start mt-20">
                         <div class="w-1/2 flex flex-col justify-center" style="height: 395px;">
