--- a/service-vr.html
+++ b/service-vr.html
@@ -131,11 +131,11 @@
     <!-- main -->
     <main>
         <!-- banner -->
-        <div class="sub-banner sm:bg-center sm:bg-top bg-cover bg-no-repeat mob-s:bg-center sm:h-[700px] sm:p-40 mob-s:p-20 pl-0">
+        <div class="sub-banner sm:bg-center sm:bg-top bg-cover bg-no-repeat mob-s:bg-center sm:h-[700px] sm:p-40 mob-s:p-10 pl-0">
             <div class="container mx-auto px-4  xl:pl-28 flex items-center py-4 text-xl">
                 <div class="w-3/5 flex items-center " data-aos="fade-right">
-                    <h1 class="font-2 lg:text-7xl sm:text-6xl mob-s:text-4xl leading-normal mt-20">
-                        <span class="font-2  lg:text-7xl sm:text-6xl mob-s:text-4xl text-yellow-500">VR APP</span><br> DEVELOPMENT
+                    <h1 class="font-2 lg:text-7xl sm:text-6xl mob-s:text-3xl leading-normal mt-20">
+                        <span class="font-2  lg:text-7xl sm:text-6xl mob-s:text-3xl text-yellow-500">VR APP</span><br> DEVELOPMENT
                     </h1>
                 </div>
             </div>
@@ -356,7 +356,7 @@
                     <div class="flex sm:flex-col mob-s:flex-row justify-center items-center mob-s:mt-10">
                         <div class="sm:w-full mob-s:w-1/2  mob-s:h-full flex sm:flex-row mob-s:flex-col justify-between sm:items-start mob-s:items-center sm:mt-20">
                             <div class="sm:w-96 lg:h-48 sm:h-32 mob-s:h-32 flex justify-center items-center mob-s:mb-5 sm:mb-0" data-aos="zoom-in">
-                                <p class="lg:text-xl sm:text-lg mob-s:text-base">
+                                <p class="lg:text-xl sm:text-lg mob-s:text-sm">
                                     Virtual Reality Company Solutions for different industries
                                 </p>
                             </div>
