--- a/service-metaverse.html
+++ b/service-metaverse.html
@@ -317,7 +317,7 @@
         </div>
         <div class="sm:my-28 mob-s:my-8"></div>
         <!-- metaverse development -->
-        <div class="metaverse mob-s:hidden lg:block">
+        <div class="metaverse mob-s:hidden md:block">
             <div class="container xl:container  lg:container  md:container  sm:container mx-auto px-4 flex flex-col items-center py-4 text-xl">
                 <div class="w-full text-center">
                     <h2 class=" font-2 lg:text-7xl mob-s:text-3xl leading-normal">Metaverse Development Solutions​</h2>
